--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,19 +5,28 @@ spring:
 server:
   #port: 6001
   port: 6002
-  servlet:
-    context-path: /${spring.application.name}
+  # 没有必要使用以下配置
+  #servlet:
+  #  context-path: /${spring.application.name}
 
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8000/eureka/
+      # 使用Eureka Server的集群环境
+      defaultZone: http://peer1:8001/eureka/,http://peer2:8002/eureka/,http://peer3:8003/eureka/
+  # 没有必要使用以下配置
   # 涉及到项目配置有server.servlet.context-path属性的相关处理
-  instance:
-    metadata-map:
-      management:
-        context-path: ${server.servlet.context-path}/actuator
-    health-check-url: http://127.0.0.1:${server.port}${server.servlet.context-path}/actuator/health
-    status-page-url: http://127.0.0.1:${server.port}${server.servlet.context-path}/actuator/info
-    home-page-url: http://127.0.0.1:${server.port}/
+  #instance:
+  #  metadata-map:
+  #    management:
+  #      context-path: ${server.servlet.context-path}/actuator
+  #  health-check-url: http://127.0.0.1:${server.port}${server.servlet.context-path}/actuator/health
+  #  status-page-url: http://127.0.0.1:${server.port}${server.servlet.context-path}/actuator/info
+  #  home-page-url: http://127.0.0.1:${server.port}/
+
+# 自定义的关于其他应用API的配置项
+api:
+  budget:
+    # 此url的hostname指向Eureka Server的Application名称
+    url: http://BUDGET
       
