--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     suffix: .html
     mode: HTML5
     servlet:
-      content-type: text/html
+      content-type: text/html; charset=utf-8
     encoding: UTF-8
     cache: false
   freemarker:
